<resources>
	<string name="app_name" translatable="false">ft_hangouts</string>
	<string name="settings_actionBarColorList_title">Choose action bar color</string>
	<string name="settings_theme_title">Theme</string>
	<string name="main_menu_settings">Settings</string>
	<string name="title_activity_add_edit_contact" translatable="false">AddEditContactActivity</string>
	<string name="cancel">Cancel</string>
	<string name="contact_add">Add contact</string>
	<string name="contact_edit">Edit contact</string>
	<string name="contact_delete">Delete contact</string>
	<string name="contact_save">Save contact</string>
	<string name="contact_name">Name</string>
	<string name="contact_last_name">Last name</string>
	<string name="contact_nickname">Nickname</string>
	<string name="contact_number">Number</string>
	<string name="contact_email">Email</string>
	<string name="contact_call_contact">Call contact</string>
	<string name="contact_sms_contact">Send SMS to contact</string>
	<string name="contact_email_contact">Send E-Mail to contact</string>
	<string name="contact_delete_entry">Delete entry ?</string>
	<string name="contact_delete_warning">Are you sure you want to delete this entry ?</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="choose_action">Select the action</string>
	<string name="contact_photo">Contact photo</string>
	<string name="color_red">Red</string>
	<string name="color_green">Green</string>
	<string name="color_blue">Blue</string>
</resources>
