<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.fgundlac.ft_hangouts.Contacts.ShowContactActivity"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/nameTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:text="@string/contact_name"/>

		<TextView
			android:id="@+id/nicknameTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:text="@string/contact_nickname"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/numberLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/numberTextView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:gravity="center_vertical"
			android:text="@string/contact_number"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="50"
				android:orientation="horizontal">

				<ImageButton
					android:id="@+id/callButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/contact_call_contact"
					android:src="@drawable/ic_call"/>

				<ImageButton
					android:id="@+id/smsButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/contact_sms_contact"
					android:src="@drawable/ic_sms"/>
			</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/emailLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/emailTextView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:gravity="center_vertical"
			android:text="@string/contact_email"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:orientation="horizontal">

			<ImageButton
				android:id="@+id/emailButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/contact_email_contact"
				android:src="@drawable/ic_email"/>
		</LinearLayout>
	</LinearLayout>


</LinearLayout>
