<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/nameTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:text="@string/contact_name"
			android:textSize="17dp"/>

		<TextView
			android:id="@+id/nicknameTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:text="@string/contact_nickname"
			android:textSize="17dp"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/numberTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:text="@string/contact_number"/>

		<TextView
			android:id="@+id/emailTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:text="@string/contact_email"/>
	</LinearLayout>

</LinearLayout>