<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.fgundlac.ft_hangouts.Contacts.AddEditContactActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/nameEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/contact_name"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/lastNameEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/contact_last_name"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/nicknameEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/contact_nickname"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/numberEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/contact_number"
					android:inputType="phone"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/emailEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textEmailAddress"
					android:hint="@string/contact_email"/>
			</android.support.design.widget.TextInputLayout>
		</LinearLayout>
	</ScrollView>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/saveContactButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
		android:contentDescription="@string/contact_save"
		android:src="@drawable/ic_action_tick"/>

</RelativeLayout>
